/*
Copyright 2022 The kubeall.com Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/


// This file was autogenerated by go-to-protobuf. Do not edit it manually!

syntax = "proto2";

package github.com.kube_all.public_cloud.tencent.v1alpha1;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "k8s.io/apimachinery/pkg/runtime/schema/generated.proto";

// Package-wide variables from generator "generated".
option go_package = "github.com/kube-all/public-cloud/tencent/v1alpha1";

message Addon {
  optional string name = 1;

  optional string config = 2;

  optional bool disabled = 3;
}

// AliyunACK is the schema for the clusters API
message AliyunACK {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ObjectMeta metadata = 1;

  optional AliyunACKSpec spec = 2;

  optional AliyunACKStatus status = 3;
}

message AliyunACKList {
  optional k8s.io.apimachinery.pkg.apis.meta.v1.ListMeta metadata = 1;

  repeated AliyunACK items = 2;
}

message AliyunACKSpec {
  // +kubebuilder:validation:Required
  // +kubebuilder:validation:Enum=Kubernetes;ManagedKubernetes;Ask
  optional string cluster_type = 1;

  optional Ask ask = 2;

  optional Kubernetes kubernetes = 3;

  optional ManagedKubernetes managed_kubernetes = 4;
}

message AliyunACKStatus {
  // cluster id
  // +optional
  optional string cluster_id = 1;

  // cluster kubeconfig
  // +optional
  optional string config = 2;

  // kubeconfig expire time, format:RFC3339 UTC
  // +optional
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time expiration = 3;

  // all cluster tasks
  // +optional
  repeated AliyunTask tasks = 4;
}

message AliyunTask {
  // request time
  // +kubebuilder:validation:Required
  optional k8s.io.apimachinery.pkg.apis.meta.v1.Time time = 1;

  // aliyun response request_id
  // +kubebuilder:validation:Required
  optional string request_id = 2;

  // aliyun response task_id
  // +kubebuilder:validation:Required
  optional string task_id = 3;
}

message Ask {
  // 集群类型。可选值为ManagedKubernetes，同时profile配置为Serverless，表示创建Serverless集群。
  // +kubebuilder:validation:Required
  // +kubebuilder:validation:Enum=ManagedKubernetes;Ask
  optional string cluster_type = 1;

  // 集群标识。参数cluster_type取值为ManagedKubernetes，同时该参数配置为Serverless，表示创建Serverless集群。
  // +kubebuilder:validation:Required
  // +kubebuilder:validation:default=Serverless
  optional string profile = 2;

  // +optional
  optional string cluster_spec = 3;

  // +optional
  // +kubebuilder:validation:Enum=1.24.3-aliyun.1;1.22.10-aliyun.1
  optional string kubernetes_version = 4;

  // +optional
  optional bool private_zone = 5;

  // 集群所在的地域ID
  // +kubebuilder:validation:Required
  optional string region_id = 6;

  // +optional
  optional bool endpoint_public_access = 7;

  // +optional
  repeated string service_discovery_types = 8;

  // +optional
  optional string zoneid = 9;

  // +optional
  optional string logging_type = 10;

  // +optional
  repeated Tag tags = 11;

  // +optional
  optional bool deletion_protection = 12;

  // +optional
  optional string service_cidr = 13;

  // +optional
  optional string timezone = 14;

  // +optional
  repeated Addon addons = 15;

  // +optional
  optional bool snat_entry = 16;

  // +optional
  optional string vpcid = 17;

  // +optional
  repeated string vswitch_ids = 18;

  // +optional
  optional string security_group_id = 19;

  // +optional
  optional string resourceGroupId = 20;
}

message Kubernetes {
}

message ManagedKubernetes {
}

message Tag {
  optional string key = 1;

  optional string value = 2;
}

